necessary http interface methods generated
